# CodeWars-ASM

./: CMakeLists.txt
src/: main.c  maxp_array.asm  middle_char.asm  reverse_num.asm  sqrdigs.asm
